# restconf

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Config.in  Makefile  README.md  ROADMAP.md  SESSION_2026-07-11.md  TEST-ROADMAP.md  common.mk  ebuild.mk  http.h  restconf_handler.h
.draft/: 10_Scenarios_End_to_End.md
.draft/catalog/: YANG_Type_Catalog.md
.draft/restconf-qualification/: README.md
.draft/restconf-qualification/datasets/oven/: README.md
.draft/restconf-qualification/docs/: 00_Introduction.md  01_Strategie_de_Test.md  02_Infrastructure_RESTCONF.md  03_Ressources_RESTCONF.md  04_Parametres_RESTCONF.md  05_RPC_Actions_Notifications.md  06_NMDA.md  08_Securite.md  09_Performance_Robustesse.md  10_Scenarios_End_to_End.md  11_Matrice_de_Conformite.md  12_Jeux_de_Donnees.md  13_Glossaire.md  14_Campagnes_de_Test.md  15_Couverture_Fonctionnelle.md  28_Mapping_Pytest.md  29_Couverture_Modele_YANG.md
.draft/restconf-qualification/templates/: TestCase_Template.md
.github/workflows/: docker-image.yml
doc/test/: README.md  STRATEGY.md  TEST-ROADMAP.md  campaigns.md  coverage.md  glossary.md  pytest-mapping.md  yang-coverage.md
doc/test/cases/errors/: README.md
doc/test/cases/infrastructure/: README.md  RESOURCES.md
doc/test/cases/nmda/: README.md
doc/test/cases/parameters/: README.md
doc/test/cases/performance/: README.md
doc/test/cases/rpc/: README.md
doc/test/cases/security/: README.md
doc/test/datasets/: README.md
doc/test/examples/oven/: README.md  test_oven_basic.py
doc/test/matrices/: README.md
doc/test/modules/: restconf-test.json  restconf-test.yang
doc/test/scenarios/: README.md
doc/test/templates/: Requirement_Template.md
docker/: Dockerfile  entrypoint.sh  start-nginx.sh
etc/: nginx-restconf.conf.example
include/: codec.h  errors.h  h2c_server.h  http.h  jwt_validator.h  logger.h  plugin_api.h  restconf_handler.h  restconf_path.h  router.h  sse_stream.h  sysrepo_backend.h  sysrepo_worker.h
include/ipc/: uds_common.h  uds_data_proto.h
plugins/restconf_monitoring/: restconf_monitoring.c
scripts/: build_log.sh  build_test.sh
src/: codec.c  ebuild.mk  errors.c  h2c_server.c  http.c  jwt_validator.c  logger.c  main.c  restconf_handler.c  restconf_path.c  router.c  sse_stream.c  sysrepo_backend.c
src/ipc/: uds_common.c  uds_gateway.c  uds_plugin.c
src/plugin/: plugin_main.c  sysrepo_plugin.c  sysrepo_worker.c
src/sysrepo/: ebuild.mk
test/: CMakeLists.txt  basic.sh  conftest.py  requirements.txt  resconf-test.c  restconf-test.c  test_basic.py  test_crud.py  test_errors.py  test_nmda.py  test_oven.py  test_performance.py  test_query_params.py  test_rpc.py  test_security.py
test/raodmap/: 01_Introduction.md  07_Erreurs.md
